# bevy_prototype_lyon

./: Cargo.toml  README.md
examples/: dynamic_shape.rs  svg.rs  tiled.rs
src/: entity.rs  geometry.rs  shapes.rs
src/render/: mod.rs  shape.wgsl
