[package]
authors = ["Federico Rinaldi <gisquerin@gmail.com>"]
categories = ["game-engines", "graphics", "rendering"]
description = "Draw 2D shapes and paths in the Bevy game engine."
edition = "2021"
keywords = ["game", "shapes", "gamedev", "graphics", "bevy"]
license = "MIT OR Apache-2.0"
name = "bevy_prototype_lyon"
readme = "README.md"
repository = "https://github.com/Nilirad/bevy_prototype_lyon/"
version = "0.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = [
    "bevy_asset",
    "bevy_sprite",
    "bevy_render",
    "bevy_core_pipeline",
] }
lyon_tessellation = "1.0.1"
svgtypes = "0.5"

[profile.dev.package.layout21]
opt-level = 3

[profile.dev.package."*"]
opt-level = 1

# [profile.dev]
# opt-level = 3

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = [
    "x11",
] }
crossbeam-channel = "0.5.5"
futures-lite = "1.12.0"
vlsir = "1.0.0"
layout21 = { git = "https://github.com/colepoirier/Layout21" }
geo = "0.22.1"
csv = "1.1.6"
